--- a/zfish1.h5ad.zarr/config.json
+++ b/zfish1.h5ad.zarr/config.json
@@ -9,7 +9,7 @@
       "files": [
         {
           "fileType": "anndata.zarr",
-          "url": "http://127.0.0.1:3000/zfish1.h5ad.zarr",
+          "url": "https://esztersojtory.github.io/vitessce_data/zfish.h5ad.zarr",
           "options": {
             "obsEmbedding": [
               {
